--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
         <p id="numeros"></p>
       </div>
       <div class="conteudo">
-        <button type="button" class="aritmeticos" value="%" onclick="display('%')">%</button>
-        <button type="button" class="aritmeticos" value="ce" onclick="parenteses()">( )</button>
-        <button type="button" class="aritmeticos" value="c" onclick="limpar()">C</button>
-        <button type="button" class="aritmeticos" value="/" onclick="display('/')">÷</button>
-        <button type="button" value="7" onclick="display('7')">7</button>
-        <button type="button" value="8" onclick="display('8')">8</button>
-        <button type="button" value="9" onclick="display('9')">9</button>
-        <button type="button" class="aritmeticos" value="x" onclick="display('*')">x</button>
-        <button type="button" value="4" onclick="display('4')">4</button>
-        <button type="button" value="5" onclick="display('5')">5</button>
-        <button type="button" value="6" onclick="display('6')">6</button>
-        <button type="button" class="aritmeticos" value="-" onclick="display('-')">-</button>
-        <button type="button" value="1" onclick="display('1')">1</button>
-        <button type="button" value="2" onclick="display('2')">2</button>
-        <button type="button" value="3" onclick="display('3')">3</button>
-        <button type="button" class="aritmeticos" value="+" onclick="display('+')">+</button>
-        <button type="button" class="texto" onclick="display('Obrigado! ^^')">&#10084;</button>
-        <button type="button" value="0" onclick="display('0')">0</button>
-        <button type="button" value="." onclick="display('.')">,</button>
-        <button type="button" class="start" value="start" onclick="calculo()">=</button>
+        <button type="button" id="bcleanlast">CE</button>
+        <button type="button" id="bclean">C</button>
+        <button type="button" id="bparent">( )</button>
+        <button type="button" id="bdiv">/</button>
+        <button type="button" id="b7">7</button>
+        <button type="button" id="b8">8</button>
+        <button type="button" id="b9">9</button>
+        <button type="button" id="bmult">x</button>
+        <button type="button" id="b4">4</button>
+        <button type="button" id="b5">5</button>
+        <button type="button" id="b6">6</button>
+        <button type="button" id="bsubt">-</button>
+        <button type="button" id="b1">1</button>
+        <button type="button" value="2" id="b2">2</button>
+        <button type="button" value="3" id="b3">3</button>
+        <button type="button" id="badic">+</button>
+        <button type="button" id="inverter">±</button>
+        <button type="button" id="b0">0</button>
+        <button type="button" id="bvirg">,</button>
+        <button type="button" id="start">=</button>
       </div>
     </main>
 
