--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
       <div class="conteudo">
         <button type="button" id="bcleanlast">CE</button>
         <button type="button" id="bclean">C</button>
-        <button type="button" id="bparent">( )</button>
+        <button type="button" id="parenteses">
+          <div id="bparent"><span>( )</span></div>
+          <div class='separado z_index'>
+            <div id='abre'><span>(</span></div>
+            <div id='fecha'><span>)</span></div>
+          </div>
+        </button>
         <button type="button" id="bdiv">/</button>
         <button type="button" id="b7">7</button>
         <button type="button" id="b8">8</button>
@@ -48,8 +54,9 @@
         <button type="button" id="start">=</button>
       </div>
     </main>
+
   </div>
   <script src="./js/script.js"></script>
 </body>
-
+<!--3**2 = 9-->
 </html>
