--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
       <div class="conteudo">
         <button type="button" id="bcleanlast">CE</button>
         <button type="button" id="bclean">C</button>
+
         <button type="button" id="parenteses">
           <div id="bparent"><span>( )</span></div>
-          <div class='separado z_index'>
-            <div id='abre'><span>(</span></div>
-            <div id='fecha'><span>)</span></div>
+          <div class="separado z_index">
+            <div id="abre"><span>(</span></div>
+            <div id="fecha"><span>)</span></div>
           </div>
+          <div id="alterar"><span>(/)</span></div>
         </button>
+
         <button type="button" id="bdiv">/</button>
         <button type="button" id="b7">7</button>
         <button type="button" id="b8">8</button>
@@ -48,7 +51,15 @@
         <button type="button" value="2" id="b2">2</button>
         <button type="button" value="3" id="b3">3</button>
         <button type="button" id="badic">+</button>
-        <button type="button" id="inverter">±</button>
+
+        <button type="button" id="especial">
+          <div id="inverter"><span>±</span></div>
+          <div class="separado2 z_index2">
+            <div id="elevacao"><span>^</span></div>
+          </div>
+          <div id="alterar2"><span>^</span></div>
+        </button>
+
         <button type="button" id="b0">0</button>
         <button type="button" id="bvirg">,</button>
         <button type="button" id="start">=</button>
@@ -58,6 +69,5 @@
   </div>
   <script src="./js/script.js"></script>
 </body>
-<!--3**2 = 9-->
 
 </html>
