--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
 
     <header id="header">
-      <img class="icon" src="./img/icon.png" alt="">
+      <img class="icon" src="./img/icon.png">
       <h1>Calculadora</h1>
       <div class="networking">
         <a href="https://github.com/adriwco"><img class="icon" src="./img/github.svg" alt="GitHub"></a>
@@ -28,16 +28,14 @@
       <div class="conteudo">
         <button type="button" id="bcleanlast">CE</button>
         <button type="button" id="bclean">C</button>
-
         <button type="button" id="parenteses">
           <div id="bparent"><span>( )</span></div>
-          <div class="separado z_index">
+          <div id="separado" class="">
             <div id="abre"><span>(</span></div>
             <div id="fecha"><span>)</span></div>
           </div>
           <div id="alterar"><span>(/)</span></div>
         </button>
-
         <button type="button" id="bdiv">/</button>
         <button type="button" id="b7">7</button>
         <button type="button" id="b8">8</button>
@@ -51,15 +49,13 @@
         <button type="button" value="2" id="b2">2</button>
         <button type="button" value="3" id="b3">3</button>
         <button type="button" id="badic">+</button>
-
         <button type="button" id="especial">
           <div id="inverter"><span>±</span></div>
-          <div class="separado2 z_index2">
+          <div id="separado2">
             <div id="elevacao"><span>^</span></div>
           </div>
           <div id="alterar2"><span>^</span></div>
         </button>
-
         <button type="button" id="b0">0</button>
         <button type="button" id="bvirg">,</button>
         <button type="button" id="start">=</button>
