--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button type="button" id="bclean">C</button>
         <button type="button" id="parenteses">
           <div id="bparent"><span>( )</span></div>
-          <div id="separado" class="">
+          <div id="separado">
             <div id="abre"><span>(</span></div>
             <div id="fecha"><span>)</span></div>
           </div>
