update-href-linkedln

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <div class="container">
 
     <header id="header">
-      <img class="icon" src="./img/icon.png">
+      <img class="icon" src="./img/icon.png"  width="64" height="64">
       <h1>Calculadora</h1>
       <div class="networking">
-        <a href="https://github.com/adriwco"><img class="icon" src="./img/github.svg" alt="GitHub"></a>
-        <a href="https://www.linkedin.com/in/adriweverton"><img class="icon" src="./img/linkedin.svg" alt="LinkedIn"></a>
+        <a href="https://github.com/adriwco"><img class="icon" src="./img/github.svg" width="64" height="64" alt="GitHub"></a>
+        <a href="https://www.linkedin.com/in/adriwco"><img class="icon" src="./img/linkedin.svg" width="64" height="64" alt="LinkedIn"></a>
       </div>
     </header>
 
